--- a/public/src/css/components/_footer.scss
+++ b/public/src/css/components/_footer.scss
@@ -1,14 +1,16 @@
 .silverBox-footer {
     margin-top: var(--silverBox-items-top-margin);
-    a {
+    div {
         color: var(--silverBox-footer-color);
+        font-size: var(--silverBox-footer-font-size);
+        font-weight: var(--silverBox-footer-font-weight);
     }
 
     hr {
-        margin: 20px 0 10px;
+        margin: var(--silverBox-footer-hr-margin);
         background-color: var(--silverBox-hr-line-color);
         border: none;
-        height: 1px;
+        height:var(--silverBox-footer-hr-height);
     }
 
 }
